@@ -31,134 +31,133 @@ K_7 = 55
 K_8 = 56
 K_9 = 57
 K_ALT = 18
-K_AMPERSAND = 166    #charcode 38, DOM_VK 166
-K_ASTERISK = 170     #charcode 42, DOM_VK 170
+K_AMPERSAND = 38
+K_ASTERISK = 42
 K_AT = 64
 K_BACKQUOTE = 96
 K_BACKSLASH = 92
 K_BACKSPACE = 8
-K_BREAK = 0
-K_CAPSLOCK = 20
+K_BREAK = 0x40000048
+K_CAPSLOCK = 0x40000039
 K_CARET = 94
-K_CLEAR = 0
+K_CLEAR = 0x4000009c
 K_COLON = 58
-K_COMMA = 188    #charcode 44, DOM_VK 188
+K_COMMA = 44
 K_CTRL = 17
-K_DELETE = 46
-K_DOLLAR = 164   #charcode 36, DOM_VK 164
-K_DOWN = 40
-K_END = 35
+K_DELETE = 127
+K_DOLLAR = 36
+K_DOWN = 0x40000051
+K_END = 0x4000004d
 K_EQUALS = 61
 K_ESCAPE = 27
-K_EURO = 0
-K_EXCLAIM = 161  #charcode 33, DOM_VK 161
-K_F1 = 112
-K_F2 = 113
-K_F3 = 114
-K_F4 = 115
-K_F5 = 116
-K_F6 = 117
-K_F7 = 118
-K_F8 = 119
-K_F9 = 120
-K_F10 = 121
-K_F11 = 122
-K_F12 = 123
-K_F13 = 124
-K_F14 = 125
-K_F15 = 126
-K_FIRST = 0
+K_EURO = 0x20AC
+K_EXCLAIM = 33
+K_F1 = 0x4000003a
+K_F2 = 0x4000003b
+K_F3 = 0x4000003c
+K_F4 = 0x4000003d
+K_F5 = 0x4000003e
+K_F6 = 0x4000003f
+K_F7 = 0x40000040
+K_F8 = 0x40000041
+K_F9 = 0x40000042
+K_F10 = 0x40000043
+K_F11 = 0x40000044
+K_F12 = 0x40000045
+K_F13 = 0x40000068
+K_F14 = 0x40000069
+K_F15 = 0x4000006a
 K_GREATER = 62
-K_HASH = 163 #charcode 35, DOM_VK 163
-K_HELP = 0
-K_HOME = 36
-K_INSERT = 45
-K_KP0 = 96
-K_KP1 = 97
-K_KP2 = 98
-K_KP3 = 99
-K_KP4 = 100
-K_KP5 = 101
-K_KP6 = 102
-K_KP7 = 103
-K_KP8 = 104
-K_KP9 = 105
-K_KP_DIVIDE = 0
-K_KP_ENTER = 0
-K_KP_EQUALS = 0
-K_KP_MINUS = 0
-K_KP_MULTIPLY = 0
-K_KP_PERIOD = 0
-K_KP_PLUS = 0
+K_HASH = 35
+K_HELP = 0x40000075
+K_HOME = 0x4000004a
+K_INSERT = 0x40000049
+K_KP0 = 0x40000062
+K_KP1 = 0x40000059
+K_KP2 = 0x4000005a
+K_KP3 = 0x4000005b
+K_KP4 = 0x4000005c
+K_KP5 = 0x4000005d
+K_KP6 = 0x4000005e
+K_KP7 = 0x4000005f
+K_KP8 = 0x40000060
+K_KP9 = 0x40000061
+K_KP_DIVIDE = 0x40000054
+K_KP_ENTER = 0x40000058
+K_KP_EQUALS = 0x40000067
+K_KP_MINUS = 0x40000056
+K_KP_MULTIPLY = 0x40000055
+K_KP_PERIOD = 0x40000063
+K_KP_PLUS = 0x40000057
 K_LALT = 18
-K_LAST = 0
 K_LCTRL = 17
-K_LEFT = 37
+K_LEFT = 0x40000050
 K_LEFTBRACKET = 91
-K_LEFTPAREN = 168    #charcode 40, DOM_VK 168
+K_LEFTPAREN = 40
 K_LESS = 60
-K_LMETA = 0
+K_LMETA = 0x400000e3
 K_LSHIFT = 16
-K_LSUPER = 0
-K_MENU = 0
-K_MINUS = 173    #charcode 45, DOM_VK 173
-K_MODE = 0
-K_NUMLOCK = 0
-K_PAGEDOWN = 34
-K_PAGEUP = 33
-K_PAUSE = 19
-K_PERIOD = 190   #charcode 46, DOM_VK 190
-K_PLUS = 171     #charcode 43, DOM_VK 171
-K_POWER = 0
-K_PRINT = 42
+K_LSUPER = 0x400000e3
+K_MENU = 0x40000076
+K_MINUS = 45
+K_MODE = 0x40000101
+K_NUMLOCK = 0x40000053
+K_PAGEDOWN = 0x4000004e
+K_PAGEUP = 0x4000004b
+K_PAUSE = 0x40000048
+K_PERIOD = 46
+K_PLUS = 43
+K_POWER = 0x40000066
+K_PRINT = 0x40000046
 K_QUESTION = 63
-K_QUOTE = 222    #charcode 39, DOM_VK 222
-K_QUOTEDBL = 162 #charcode 34, DOM_VK 162
+K_QUOTE = 39
+K_QUOTEDBL = 34
 K_RALT = 18
 K_RCTRL = 17
 K_RETURN = 13
-K_RIGHT = 39
+K_RIGHT = 0x4000004F
 K_RIGHTBRACKET = 93
-K_RIGHTPAREN = 169       #charcode 41, DOM_VK 169
-K_RMETA = 0
+K_RIGHTPAREN = 41
+K_RMETA = 0x400000e3
 K_RSHIFT = 16
-K_RSUPER = 0
-K_SCROLLOCK = 0
-K_SEMICOLON = 186
+K_RSUPER = 0x400000e3
+K_SCROLLOCK = 0x40000047
+K_SCROLLLOCK = 0x40000047
+K_SEMICOLON = 59
 K_SHIFT = 16
-K_SLASH = 191
+K_SLASH = 92
 K_SPACE = 32
-K_SYSREQ = 0
+K_SYSREQ = 0x4000009a
 K_TAB = 9
 K_UNDERSCORE = 95
 K_UNKNOWN = 0
-K_UP = 38
-K_a = 65
-K_b = 66
-K_c = 67
-K_d = 68
-K_e = 69
-K_f = 70
-K_g = 71
-K_h = 72
-K_i = 73
-K_j = 74
-K_k = 75
-K_l = 76
-K_m = 77
-K_n = 78
-K_o = 79
-K_p = 80
-K_q = 81
-K_r = 82
-K_s = 83
-K_t = 84
-K_u = 85
-K_v = 86
-K_w = 87
-K_x = 88
-K_y = 89
-K_z = 90
+K_UP = 0x40000052
+K_a = 97
+K_b = 98
+K_c = 99
+K_d = 100
+K_e = 101
+K_f = 102
+K_g = 103
+K_h = 104
+K_i = 105
+K_j = 106
+K_k = 107
+K_l = 108
+K_m = 109
+K_n = 110
+K_o = 111
+K_p = 112
+K_q = 113
+K_r = 114
+K_s = 115
+K_t = 116
+K_u = 117
+K_v = 118
+K_w = 119
+K_x = 120
+K_y = 121
+K_z = 122
 
 MOUSEBUTTONDOWN = 5
 MOUSEBUTTONUP = 6
@@ -167,10 +166,10 @@ KEYDOWN = 2
 KEYUP = 3
 
 ACTIVEEVENT = 1
-DOUBLEBUF = 1073741824
-FULLSCREEN = -2147483648
+DOUBLEBUF = 0x40000000
+FULLSCREEN = -0x80000000
 HWACCEL = 256
-HWPALETTE = 536870912
+HWPALETTE = 0x20000000
 HWSURFACE = 1
 NOEVENT = 0
 NOFRAME = 32
