@@ -82,7 +82,7 @@ class Key(object):
         self.set_mods = lambda *arg: None
 
 
-_charCode = {33:Const.K_EXCLAIM, 34:Const.K_QUOTEDBL, 35:Const.K_HASH, 36:Const.K_DOLLAR, 38:Const.K_AMPERSAND, 39:Const.K_QUOTE, 40:Const.K_LEFTPAREN, 41:Const.K_RIGHTPAREN, 42:Const.K_ASTERISK, 43:Const.K_PLUS, 44:Const.K_COMMA, 45:Const.K_MINUS, 46:Const.K_PERIOD, 97:Const.K_a, 98:Const.K_b, 99:Const.K_c, 100:Const.K_d, 101:Const.K_e, 102:Const.K_f, 103:Const.K_g, 104:Const.K_h, 105:Const.K_i, 106:Const.K_j, 107:Const.K_k, 108:Const.K_l, 109:Const.K_m, 110:Const.K_n, 111:Const.K_o, 112:Const.K_p, 113:Const.K_q, 114:Const.K_r, 115:Const.K_s, 116:Const.K_t, 117:Const.K_u, 118:Const.K_v, 119:Const.K_w, 120:Const.K_x, 121:Const.K_y, 122:Const.K_z}
 _modKey = {Const.K_ALT, Const.K_CTRL, Const.K_SHIFT}
-_specialKey = {Const.K_UP, Const.K_DOWN, Const.K_LEFT, Const.K_RIGHT, Const.K_HOME, Const.K_END, Const.K_PAGEDOWN, Const.K_PAGEUP, Const.K_BACKSPACE, Const.K_DELETE, Const.K_INSERT, Const.K_RETURN, Const.K_TAB, Const.K_ESCAPE}
+
+_specialKey = {38:Const.K_UP, 40:Const.K_DOWN, 37:Const.K_LEFT, 39:Const.K_RIGHT, 36:Const.K_HOME, 35:Const.K_END, 33:Const.K_PAGEUP, 34:Const.K_PAGEDOWN,  8:Const.K_BACKSPACE, 46:Const.K_DELETE, 45:Const.K_INSERT, 12:Const.K_CLEAR, 13:Const.K_RETURN, 9:Const.K_TAB, 27:Const.K_ESCAPE, 20:Const.K_CAPSLOCK, 92:Const.K_LMETA, 93:Const.K_MENU, 44:Const.K_PRINT, 145:Const.K_SCROLLLOCK, 19:Const.K_PAUSE, 144:Const.K_NUMLOCK, 112:Const.K_F1, 113:Const.K_F2, 114:Const.K_F3, 115:Const.K_F4, 116:Const.K_F5, 117:Const.K_F6, 118:Const.K_F7, 119:Const.K_F8, 120:Const.K_F9, 121:Const.K_F10, 122:Const.K_F11, 123:Const.K_F12, 18:Const.K_ALT, 17:Const.K_CTRL, 16:Const.K_SHIFT}
 
