@@ -21,6 +21,7 @@
 -add mixer channel queue.
 -refactor event handler for performance.
 -add key set_repeat method.
+-revise key event handler.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
